<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context="${relativePackage}.${activityClass}" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp" >

        <Button
            android:id="@+id/deal_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/deal_button_label" />

        <Button
            android:id="@+id/hit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hit_button_label" />

        <Button
            android:id="@+id/double_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/double_button_label" />

        <Button
            android:id="@+id/stand_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stand_button_label" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/deck_label" />

        <TextView
            android:id="@+id/available_cards_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="/" />

        <TextView
            android:id="@+id/total_cards_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginRight="80dp"
        android:layout_marginTop="10dp"
        android:orientation="vertical" >

        <Button
            android:id="@+id/clear_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clear_button_label" />

        <TextView
            android:id="@+id/bet_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="" />

        <TextView
            android:id="@+id/balance_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:orientation="vertical" >

        <Button
            android:id="@+id/one_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/one_button_label" />

        <Button
            android:id="@+id/five_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/five_button_label" />

        <Button
            android:id="@+id/ten_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ten_button_label" />

        <Button
            android:id="@+id/twenty_five_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/twenty_five_button_label" />

        <Button
            android:id="@+id/one_hundred_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/one_hundred_button_label" />
    </LinearLayout>

    <TextView
        android:id="@+id/message_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="60dp"
        android:layout_marginLeft="5dp"
        android:text=""
        android:textColor="@color/text_color" />

    <TextView
        android:id="@+id/player_1_name_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginRight="200dp"
        android:layout_marginTop="15dp"
        android:text=""
        android:textColor="@color/text_color"
        android:textSize="15sp"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/player_1_score_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginRight="200dp"
        android:layout_marginTop="20dp"
        android:text=""
        android:textColor="@color/text_color"
        android:textSize="60sp" />

    <TextView
        android:id="@+id/player_2_name_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginRight="200dp"
        android:layout_marginTop="95dp"
        android:text=""
        android:textColor="@color/text_color"
        android:textSize="15sp"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/player_2_score_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginRight="200dp"
        android:layout_marginTop="100dp"
        android:text=""
        android:textColor="@color/text_color"
        android:textSize="60sp" />

    <ImageView
        android:id="@+id/player1card1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:adjustViewBounds="true"
        android:maxHeight="80dp"
        android:scaleType="fitXY" />

    <ImageView
        android:id="@+id/player1card2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="5dp"
        android:adjustViewBounds="true"
        android:maxHeight="80dp"
        android:scaleType="fitXY" />

    <ImageView
        android:id="@+id/player1card3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="45dp"
        android:layout_marginTop="5dp"
        android:adjustViewBounds="true"
        android:maxHeight="80dp"
        android:scaleType="fitXY" />

    <ImageView
        android:id="@+id/player1card4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="65dp"
        android:layout_marginTop="5dp"
        android:adjustViewBounds="true"
        android:maxHeight="80dp"
        android:scaleType="fitXY" />

    <ImageView
        android:id="@+id/player1card5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="85dp"
        android:layout_marginTop="5dp"
        android:adjustViewBounds="true"
        android:maxHeight="80dp"
        android:scaleType="fitXY" />

    <ImageView
        android:id="@+id/player1card6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="105dp"
        android:layout_marginTop="5dp"
        android:adjustViewBounds="true"
        android:maxHeight="80dp"
        android:scaleType="fitXY" />

    <ImageView
        android:id="@+id/player1card7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="125dp"
        android:layout_marginTop="5dp"
        android:adjustViewBounds="true"
        android:maxHeight="80dp"
        android:scaleType="fitXY" />

    <ImageView
        android:id="@+id/player1card8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="145dp"
        android:layout_marginTop="5dp"
        android:adjustViewBounds="true"
        android:maxHeight="80dp"
        android:scaleType="fitXY" />

    <ImageView
        android:id="@+id/player1card9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="165dp"
        android:layout_marginTop="5dp"
        android:adjustViewBounds="true"
        android:maxHeight="80dp"
        android:scaleType="fitXY" />

    <ImageView
        android:id="@+id/player1card10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="185dp"
        android:layout_marginTop="5dp"
        android:adjustViewBounds="true"
        android:maxHeight="80dp"
        android:scaleType="fitXY" />

    <ImageView
        android:id="@+id/player2card1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="85dp"
        android:adjustViewBounds="true"
        android:maxHeight="80dp"
        android:scaleType="fitXY" />

    <ImageView
        android:id="@+id/player2card2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="85dp"
        android:adjustViewBounds="true"
        android:maxHeight="80dp"
        android:scaleType="fitXY" />

    <ImageView
        android:id="@+id/player2card3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="45dp"
        android:layout_marginTop="85dp"
        android:adjustViewBounds="true"
        android:maxHeight="80dp"
        android:scaleType="fitXY" />

    <ImageView
        android:id="@+id/player2card4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="65dp"
        android:layout_marginTop="85dp"
        android:adjustViewBounds="true"
        android:maxHeight="80dp"
        android:scaleType="fitXY" />

    <ImageView
        android:id="@+id/player2card5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="85dp"
        android:layout_marginTop="85dp"
        android:adjustViewBounds="true"
        android:maxHeight="80dp"
        android:scaleType="fitXY" />

    <ImageView
        android:id="@+id/player2card6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="105dp"
        android:layout_marginTop="85dp"
        android:adjustViewBounds="true"
        android:maxHeight="80dp"
        android:scaleType="fitXY" />

    <ImageView
        android:id="@+id/player2card7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="125dp"
        android:layout_marginTop="85dp"
        android:adjustViewBounds="true"
        android:maxHeight="80dp"
        android:scaleType="fitXY" />

    <ImageView
        android:id="@+id/player2card8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="145dp"
        android:layout_marginTop="85dp"
        android:adjustViewBounds="true"
        android:maxHeight="80dp"
        android:scaleType="fitXY" />

    <ImageView
        android:id="@+id/player2card9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="165dp"
        android:layout_marginTop="85dp"
        android:adjustViewBounds="true"
        android:maxHeight="80dp"
        android:scaleType="fitXY" />

    <ImageView
        android:id="@+id/player2card10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="185dp"
        android:layout_marginTop="85dp"
        android:adjustViewBounds="true"
        android:maxHeight="80dp"
        android:scaleType="fitXY" />

</RelativeLayout>